--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
   font-family: montserrat, sans-serif;
   width: 100%;
   min-height: 100vh;
-  background-image:url(image1.jpg);
+  background-image:url(images1.jpg);
   }
 
 .card {
