--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 :root {
-  --primary: #FFFFFF;
-  --secondary: #656464;
+  --primary: #908F8F;
+  --secondary: #3D3C3C;
   --dark: #212121;
   --light: #F3F3F3;
 }
